--- a/package.json
+++ b/package.json
@@ -1,27 +1,14 @@
 {
   "name": "render-api",
   "version": "1.0.0",
-  "description": "This project was bootstrapped with Fastify-CLI.",
-  "main": "app.js",
-  "directories": {
-    "test": "test"
-  },
+  "main": "index.js",
+  "repository": "git@github.com:tanvirraj/render-api.git",
+  "author": "tanvir raj <rajbp02@gmail.com>",
+  "license": "MIT",
   "scripts": {
-    "test": "tap \"test/**/*.test.js\"",
-    "start": "fastify start -l info app.js",
-    "dev": "fastify start -w -l info -P app.js"
+    "dev": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "fastify": "^3.0.0",
-    "fastify-plugin": "^3.0.0",
-    "fastify-autoload": "^3.10.0",
-    "fastify-sensible": "^3.1.2",
-    "fastify-cli": "^2.15.0"
-  },
-  "devDependencies": {
-    "tap": "^15.1.6"
+    "fastify": "^4.10.2"
   }
 }
